fixed button spacing for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -216,26 +216,17 @@ Navigation
     position: relative;
     top: 20px;
     left: 90%;
-    margin-right:2%;
-    height: 25px;
-    width:25px;
     float: left;
 }
 .btn_git {
     position: relative;
     top: 20px;
     left: 80%;
-    margin-right:2%;
-    height: 25px;
-    width:25px;
     float: left;
 }
 .btn_res {
     position: relative;
     top: 20px;
     left: 70%;
-    margin-right:2%;
-    height: 25px;
-    width:25px;
     float: left;
 }
